[Fix][5295] Avatar is not center align

--- a/frontend/web/less/mobile/dropdown_avatar.less
+++ b/frontend/web/less/mobile/dropdown_avatar.less
@@ -7,12 +7,11 @@
 		.user-avatar-thumbnail {
 			width: 38px;
 			height: 38px;
-			max-height: 38px;
-			max-height: 38px;
 			vertical-align: top;
 			border: 1px solid #8E9FAD;
 			text-align: center;
 			display: inline-block;
+			line-height: 34px;
 			img {
 			max-width: 100%;
 			height: auto;
